# rx-engine

./: .gitignore  Cargo.toml  imgui.ini  layout.md
backend-api/: Cargo.toml
backend-api/src/: lib.rs
backend-interface/: Cargo.toml
backend-interface/src/: lib.rs  utils.rs
backend-opengl/: Cargo.toml
backend-opengl/src/: api.rs  buffer.rs  buffer_v2.rs  core.rs  framebuffer.rs  image.rs  imgui_glfw.rs  imgui_glfw_render.rs  lib.rs  memory.rs  pipeline.rs  platform.rs  platform_glfw.rs  platform_glium.rs  shader.rs  shader_mod.rs  swapchain.rs
backend-vulkan/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs  sandbox_layer.rs  test_layer.rs
client/src/plain/: frag.glsl  vert.glsl
client/src/test/: frag.glsl  vert.glsl
client/src/ubershader/: frag.glsl  vert.glsl
core/: Cargo.toml
core/src/: asset.rs  backend.rs  lib.rs  loader.rs  material.rs  mesh.rs  open_gl.rs  platform.rs  render.rs  run.rs  utils.rs
core/src/ecs/: layer.rs  mod.rs  system.rs
core/src/layer/: info_layer.rs  mod.rs
core/src/open_gl/: buffer.rs  mod.rs  shader.rs
core/src/platform/: mod.rs
core/src/render/: mod.rs
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
src/: main.rs
