[package]
name = "rx-engine"
version = "0.1.0"
authors = ["theopus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.specs]
version = "0.15.0"
[dependencies.gl]
path = "gl"
[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]
[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

