[package]
name = "backend-opengl"
version = "0.1.0"
authors = ["Oleksandr Tkachov <v-otkachov@expediagroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hot_reload = []
glfw_backend = []
glium_backend = []


[dependencies]
#
imgui-opengl-renderer = "0.4.0"
imgui-glfw-rs = "0.3.0"
imgui_glfw = {version = "0.0.22", package= "imgui"}
#
glium = { version = "0.25", default-features = false }
imgui_glium = { version = "0.1.0", features = ["glium"], package= "imgui" }

[dependencies.backend-interface]
path="../backend-interface"
[dependencies.gl]
path = "../gl"

#[dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs.git"