[package]
name = "rx_engine"
version = "0.1.0"
authors = ["Oleksandr Tkachov <theopus5@gmail.com>"]
edition = "2018"

[dependencies]
tobj = "0.1.8"
#imgui glfw - 0.0.22
imgui-opengl-renderer = "0.4.0"
imgui-glfw-rs = "0.3.0"
#imgui - 0.1.0
#clipboard = "0.5"
#glium = { version = "0.25", default-features = true }
#image = "0.21"
#imgui = "0.1.0"
#imgui-glium-renderer = "0.1.0"
#imgui-winit-support = "0.1.0"
#imgui end
[dependencies.specs]
version = "0.15.0"
[dependencies.specs-derive]
version = "0.4.0"
[dependencies.backend-opengl]
path = "../backend-opengl"
features = ["hot_reload"]
[dependencies.backend-interface]
path = "../backend-interface"
[dependencies.nalgebra]
version = "0.18.0"
[dependencies.nalgebra-glm]
version = "0.4.0"