[package]
name = "rx_engine"
version = "0.1.0"
authors = ["Oleksandr Tkachov <theopus5@gmail.com>"]
edition = "2018"

[features]
default = ["imgui_debug"]
imgui_debug = []

[dependencies]
tobj = "0.1.8"
imgui = { version = "0.1.0"}
rand = "0.7.0"

[dependencies.specs]
version = "0.15.0"
default-features = false
#features = ["parallel"]
[dependencies.specs-derive]
version = "0.4.0"
[dependencies.backend-opengl]
path = "../backend-opengl"
features = ["glfw_backend"]
[dependencies.backend-interface]
path = "../backend-interface"
[dependencies.nalgebra]
version = "0.18.0"
[dependencies.nalgebra-glm]
version = "0.4.0"
